--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>JavaScript</li>
     </ol>
     
-    <img src="https://sl.bing.net/dpClLiYGT3A" alt="c:\Users\DELL LAPTOP CORE I7\Videos\2370198.webp" title="COD lo mejor de los juegos.">
+    <img src="https://gmedia.playstation.com/is/image/SIEPDC/call-of-duty-franchise-hub-keyart-01-en-21nov23?$facebook$" alt="" title="COD lo mejor de los juegos.">
     
     <p>Visita <a href="https://www.google.com" target="_blank">Google</a> para buscar más información.</p>
 </body>
